Update the add card name

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <div class="payment-card green-card">
             <span class="fas fa-check-circle add-new-card"></span>
             <p>
-              Add new card
+              Add new
               <span class="fas fa-plus-circle add-new-card-icon"></span>
             </p>
           </div>
